--- a/public/admin.html
+++ b/public/admin.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 <meta charset="utf-8">
-<title>Library</title>
+<title>User</title>
 <link rel="stylesheet" href="css/aio.css">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -32,7 +32,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="brand"><img src="img/SelbyvilleLibrary_Logo_no_text.png" />&nbsp &nbsp KNOW HOPE LIBRARY</a>
+                        <a class="nav-link" href="index.html" id="brand"><img src="img/SelbyvilleLibrary_Logo_no_text.png" />&nbsp &nbsp KNOW HOPE LIBRARY</a>
                     </li>
                 </ul>
 
@@ -49,37 +49,84 @@
         </nav>
     </section>
 
-    <div id="slider">
-        <div id="headerSlider" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#headerSlider" data-slide-to="0" class="active"></li>
-                <li data-target="#headerSlider" data-slide-to="1"></li>
-                <li data-target="#headerSlider" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/img2.jpg"  style="width:100%;height:660px">
-                    
-                </div>
-                <div class="carousel-item">
-                    <img src="img/img1.jpg" style="width:100%;height:660px">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/img3.jpg" style="width:100%;height:660px">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#headerSlider" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#headerSlider" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
+    <div class="jumbotron text-center">
+        <h1>ADMIN PAGE</h1>
+        <p>Welcome back, Sir.</p>
     </div>
 
-    <!-- Sign in modal -->
+    <section id="team">
+        <div class="container">
+            <div class="row">
+                <h2>FIND USER</h2>
+            </div>
+        </div>
+        <div>
+            <form class="form-inline">
+                <div class="input-group">
+                    <input type="text" class="form-control" name="user-email-input" id="user-email-input" placeholder="Enter user's entire email here" size="80">
+                    <div class="input-group-btn">
+                        <button type="button" class="btn btn-success" id="user-search-btn" onclick="findUser()">Search</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div class="row">
+            <table class="table table-bordered" id="user-inf">
+                <tr>
+                    <th style="width: 25%">Name</th>
+                    <td id = 'user-inf-username'></td>
+                </tr>
+                <tr>
+                    <th style="width: 25%">Email</th>
+                    <td id = 'user-inf-email'></td>
+                </tr>
+                <tr>
+                    <th style="width: 25%">Address</th>
+                    <td id = 'user-inf-address'></td>
+                </tr>
+                <tr>
+                    <th style="width: 25%">Resident ID</th>
+                    <td id = 'user-inf-rid'></td>
+                </tr>
+
+            </table>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Book Name</th>
+                            <th>Borrow Date</th>
+                            <th>Return Date</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody id="user-history-table-body">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
+    <hr>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <h2>OTHER OPTIONS</h2>
+            </div>
+        </div>
+        <div class = "row">
+            <div class = "offset-7">
+              <button class = "btn btn-danger" data-toggle = 'modal' data-target = '#change-password-modal'>Change Password For Admin</button>
+            </div>
+        </div>
+    </section>
+
+   <!-- Sign in modal -->
     <div class="modal fade sign-in-modal" tabindex="-1" role="dialog" aria-labelledby="sign-in-modal" aria-hidden="true" id="sign-in-modal">
         <div class="modal-dialog">
 
@@ -180,7 +227,60 @@
         </div>
     </div>
 
-    <br /><br />
+    <!-- Delete modal -->
+      <div class="modal fade delete-modal" tabindex="-1" role="dialog" aria-labelledby="delete-modal" aria-hidden="true" id="delete-modal">
+          <div class="modal-dialog">
+
+              <!-- Modal content-->
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h4 class="modal-title">Delete order</h4>
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  </div>
+
+                  <div class="modal-body">
+                      <p id = "delete-order-data"></p>
+                  </div>
+
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-danger" id='accept-delete-order' data-dismiss="modal">Delete</button>
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+    <!-- Password modal -->
+      <div class="modal fade password-modal" tabindex="-1" role="dialog" aria-labelledby="change-password-modal" aria-hidden="true" id="change-password-modal">
+          <div class="modal-dialog">
+
+              <!-- Modal content-->
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h4 class="modal-title">Change your password:</h4>
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+
+                  </div>
+                  <div class="modal-body">
+                      <form>
+                          <div class="form-group">
+                              <label for="new-password">New password:</label>
+                              <input type="password" name="new-password" class="password form-control" id="new-change-password">
+                          </div>
+                          <div class="form-group">
+                              <label for="re-new-password">Confirm password:</label>
+                              <input type="password" name="re-new-password" class="password form-control" id="re-new-change-password">
+                          </div>
+                          <div class="modal-footer">
+                              <button type="submit" class="btn btn-success" id='accept-change-password' data-dismiss="modal" onclick = "changePassword()">Change</button>
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                          </div>
+                      </form>
+                  </div>
+              </div>
+          </div>
+      </div>
+      
     <section id="footer">
         <div class="container text-center">
             <p>A library web app which allows users to add and borrow books online.</p>
@@ -199,6 +299,8 @@
     <!-- initialize the SDK after all desired features are loaded -->
     <script src="/__/firebase/init.js"></script>
     <script type="text/javascript" src="js/aio.js"></script>
+    <script type="text/javascript" src="js/admin.js"></script>
+
 
 </body>
 </html>
