--- a/public/database.html
+++ b/public/database.html
@@ -76,7 +76,7 @@
 
                           <div class='form-group row'>
                               <label class="control-label col-sm-2" for="genre-list">Genre:</label>
-                              <div class="col-sm-8" id="genre-list"><div id="genre-1"><input type="text" class="form-control" value="" id="genre-name-1" placeholder="Genre #1"></div></div>
+                              <div class="col-sm-8"   id="genre-list"><div id="genre-1"><input type="text" class="form-control" value="" id="genre-name-1" placeholder="Genre #1"></div></div>
                               <div class="col-sm-2">
                                   <button type="button" class="btn btn-info form-control" id="add-book-genre">Add</button>
                                   <button type="button" class="btn btn-warning form-control" id="delete-book-genre" hidden>Delete</button>
@@ -108,37 +108,38 @@
           </div>
       </section>
 
-      <!-- Sign in modal -->
-      <div class="modal fade sign-in-modal" tabindex="-1" role="dialog" aria-labelledby="sign-in-modal" aria-hidden="true" id="sign-in-modal">
-          <div class="modal-dialog">
+     <!-- Sign in modal -->
+    <div class="modal fade sign-in-modal" tabindex="-1" role="dialog" aria-labelledby="sign-in-modal" aria-hidden="true" id="sign-in-modal">
+        <div class="modal-dialog">
 
-              <!-- Modal content-->
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <h4 class="modal-title">Log In</h4>
-                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Log In</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
 
-                  </div>
-                  <div class="modal-body">
-                      <form>
-                          <div class="form-group">
-                              <label for="email">Email address:</label>
-                              <input type="email" name="email" class="email form-control" id="email-sign-in">
-                          </div>
-                          <div class="form-group">
-                              <label for="pwd">Password:</label>
-                              <input type="password" name="password" class="password form-control" id="password-sign-in">
-                          </div>
-                      </form>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-default" id='accept-sign-in' data-dismiss="modal">Accept</button>
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <!-- Sign up modal -->
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="email">Email address:</label>
+                            <input type="email" name="email" class="email form-control" id="email-sign-in">
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">Password:</label>
+                            <input type="password" name="password" class="password form-control" id="password-sign-in">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-default" id='accept-sign-in' data-dismiss="modal">Accept</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Sign up modal -->
       <div class="modal fade sign-up-modal" tabindex="-1" role="dialog" aria-labelledby="sign-up-modal" aria-hidden="true" id="sign-up-modal">
           <div class="modal-dialog">
 
@@ -149,21 +150,38 @@
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
 
                   </div>
+
                   <div class="modal-body">
                       <form>
+                          <div class="form-group">
+                              <label for="username">Your name:</label>
+                              <input type="text" name="username" class="text form-control" id="username-sign-up">
+                          </div>
                           <div class="form-group">
                               <label for="email">Email address:</label>
                               <input type="email" name="email" class="email form-control" id="email-sign-up">
                           </div>
                           <div class="form-group">
-                              <label for="pwd">Password:</label>
+                              <label for="password-sign-up">Password:</label>
                               <input type="password" name="password" class="password form-control" id="password-sign-up">
                           </div>
+                          <div class="form-group">
+                              <label for="re-password-sign-up">Confirm password:</label>
+                              <input type="password" name="re-password" class="password form-control" id="re-password-sign-up">
+                          </div>
+                          <div class="form-group">
+                              <label for="address">Address:</label>
+                              <input type="text" name="address" class="text form-control" id="address-sign-up">
+                          </div>
+                          <div class="form-group">
+                              <label for="rid">Resident ID:</label>
+                              <input type="text" name="rid" class="text form-control" id="rid-sign-up">
+                          </div>
+                          <div class="modal-footer">
+                              <button type="submit" class="btn btn-default" id="accept-sign-up" data-dismiss="modal">Accept</button>
+                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                          </div>
                       </form>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-default" id='accept-sign-up'>Accept</button>
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                   </div>
               </div>
           </div>
@@ -200,12 +218,12 @@
       </section>
 
       <!-- update the version number as needed -->
-      <script src="/__/firebase/6.6.0/firebase-app.js"></script>
+      <script src="/__/firebase/7.4.0/firebase-app.js"></script>
       <!-- include only the Firebase features as you need -->
-      <script src="/__/firebase/6.6.0/firebase-auth.js"></script>
-      <script src="/__/firebase/6.6.0/firebase-database.js"></script>
-      <script src="/__/firebase/6.6.0/firebase-messaging.js"></script>
-      <script src="/__/firebase/6.6.0/firebase-storage.js"></script>
+      <script src="/__/firebase/7.4.0/firebase-auth.js"></script>
+      <script src="/__/firebase/7.4.0/firebase-database.js"></script>
+      <script src="/__/firebase/7.4.0/firebase-messaging.js"></script>
+      <script src="/__/firebase/7.4.0/firebase-storage.js"></script>
       <!-- initialize the SDK after all desired features are loaded -->
       <script src="/__/firebase/init.js"></script>
       <script type="text/javascript" src="js/aio.js"></script>
