--- a/public/showbook.html
+++ b/public/showbook.html
@@ -60,12 +60,12 @@
               </p>
               <form class="form-inline">
                   <div class="input-group">
-                      <input type="text" class="form-control" name="book-input" id="book-input" placeholder="Type keywords here" size="80">
+                      <input type="text" class="form-control" name="book-input" id="book-input" placeholder="Type keywords here and press search button" size="80">
                       <div class="input-group-btn">
-                          <button type="button" class="btn btn-success" id="book-search-btn" onclick="bookFilter()">Search</button>
-                      </div>
+                          <button type="button" class="btn btn-success" id="book-search-btn" onclick = "bookFilter()">Search</button>
+                      </div>  
                       <div class="input-group-btn">
-                          <button type="button" class="btn btn-success" id="add-btn" onclick="window.location = 'database.html'; " style="font-weight: bold">ADD BOOK</button>
+                          <button type="button" class="btn btn-success" id="add-btn" onclick="window.location = 'database.html'; " style="font-weight: bold" hidden>ADD BOOK</button>
                       </div>
                   </div>
               </form>
@@ -85,38 +85,38 @@
           <div id="content-error"></div>
       </section>
 
-      <<!-- Sign in modal -->
-      <div class="modal fade sign-in-modal" tabindex="-1" role="dialog" aria-labelledby="sign-in-modal" aria-hidden="true" id="sign-in-modal">
-          <div class="modal-dialog">
+    <!-- Sign in modal -->
+    <div class="modal fade sign-in-modal" tabindex="-1" role="dialog" aria-labelledby="sign-in-modal" aria-hidden="true" id="sign-in-modal">
+        <div class="modal-dialog">
 
-              <!-- Modal content-->
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <h4 class="modal-title">Log In</h4>
-                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Log In</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
 
-                  </div>
-                  <div class="modal-body">
-                      <form>
-                          <div class="form-group">
-                              <label for="email">Email address:</label>
-                              <input type="email" name="email" class="email form-control" id="email-sign-in">
-                          </div>
-                          <div class="form-group">
-                              <label for="pwd">Password:</label>
-                              <input type="password" name="password" class="password form-control" id="password-sign-in">
-                          </div>
-                      </form>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-default" id='accept-sign-in' data-dismiss="modal">Accept</button>
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  </div>
-              </div>
-          </div>
-      </div>
-
-      <!-- Sign up modal -->
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="email">Email address:</label>
+                            <input type="email" name="email" class="email form-control" id="email-sign-in">
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">Password:</label>
+                            <input type="password" name="password" class="password form-control" id="password-sign-in">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-default" id='accept-sign-in' data-dismiss="modal">Accept</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Sign up modal -->
       <div class="modal fade sign-up-modal" tabindex="-1" role="dialog" aria-labelledby="sign-up-modal" aria-hidden="true" id="sign-up-modal">
           <div class="modal-dialog">
 
@@ -127,48 +127,64 @@
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
 
                   </div>
+
                   <div class="modal-body">
                       <form>
+                          <div class="form-group">
+                              <label for="username">Your name:</label>
+                              <input type="text" name="username" class="text form-control" id="username-sign-up">
+                          </div>
                           <div class="form-group">
                               <label for="email">Email address:</label>
                               <input type="email" name="email" class="email form-control" id="email-sign-up">
                           </div>
                           <div class="form-group">
-                              <label for="pwd">Password:</label>
+                              <label for="password-sign-up">Password:</label>
                               <input type="password" name="password" class="password form-control" id="password-sign-up">
+                          </div>
+                          <div class="form-group">
+                              <label for="re-password-sign-up">Confirm password:</label>
+                              <input type="password" name="re-password" class="password form-control" id="re-password-sign-up">
+                          </div>
+                          <div class="form-group">
+                              <label for="address">Address:</label>
+                              <input type="text" name="address" class="text form-control" id="address-sign-up">
+                          </div>
+                          <div class="form-group">
+                              <label for="rid">Resident ID:</label>
+                              <input type="text" name="rid" class="text form-control" id="rid-sign-up">
+                          </div>
+                          <div class="modal-footer">
+                              <button type="submit" class="btn btn-default" id="accept-sign-up" data-dismiss="modal">Accept</button>
+                              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                           </div>
                       </form>
                   </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-default" id='accept-sign-up'>Accept</button>
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  </div>
               </div>
           </div>
       </div>
 
-      <!-- Sign out modal -->
-      <div class="modal fade sign-out-modal" tabindex="-1" role="dialog" aria-labelledby="sign-out-modal" aria-hidden="true" id="sign-out-modal">
-          <div class="modal-dialog">
+    <!-- Sign out modal -->
+    <div class="modal fade sign-out-modal" tabindex="-1" role="dialog" aria-labelledby="sign-out-modal" aria-hidden="true" id="sign-out-modal">
+        <div class="modal-dialog">
 
-              <!-- Modal content-->
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <h4 class="modal-title">Signing out of your account</h4>
-                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Signing out of your account</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
 
-
-                  </div>
-                  <div class="modal-body">
-                      <p>Are you sure?</p>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-default" id='accept-sign-out' data-dismiss="modal">Sign Out</button>
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  </div>
-              </div>
-          </div>
-      </div>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" id='accept-sign-out' data-dismiss="modal">Sign Out</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
       <!-- Book ordering modal -->
       <div class="modal fade book-order-modal" tabindex="-1" role="dialog" aria-labelledby="book-order-modal" aria-hidden="true" id="book-order-modal">
@@ -189,13 +205,14 @@
                               <div class="row">
                                   <div class="col-sm-11">
                                       <h2 id="modal-book-name"></h2>
+                                      <b>Author: </b><p id = "modal-book-author">Stuff</p>
+                                      <b>Genre: </b><p id = "modal-book-genre">Stuff</p>
                                   </div>
                               </div>
                               <div class="row">
                                   <div class="col-sm-11">
                                       <p id="modal-book-information"></p>
-                                      <p><strong>NOTE: YOU MUST RETURN THE BOOK 14 DAYS.</strong></p>
-                                      <p><strong>AFTER 14 DAYS, GO TO THE LIBRARY TO EXTEND BORROWING PERIOD.</strong></p>
+                                      <p><strong>CHÚ Ý: (điền chú ý ở đây)  </strong></p>
                                   </div>
                               </div>
                               <div class="row">
@@ -225,12 +242,12 @@
       </section>
 
       <!-- update the version number as needed -->
-      <script src="/__/firebase/6.6.0/firebase-app.js"></script>
+      <script src="/__/firebase/7.4.0/firebase-app.js"></script>
       <!-- include only the Firebase features as you need -->
-      <script src="/__/firebase/6.6.0/firebase-auth.js"></script>
-      <script src="/__/firebase/6.6.0/firebase-database.js"></script>
-      <script src="/__/firebase/6.6.0/firebase-messaging.js"></script>
-      <script src="/__/firebase/6.6.0/firebase-storage.js"></script>
+      <script src="/__/firebase/7.4.0/firebase-auth.js"></script>
+      <script src="/__/firebase/7.4.0/firebase-database.js"></script>
+      <script src="/__/firebase/7.4.0/firebase-messaging.js"></script>
+      <script src="/__/firebase/7.4.0/firebase-storage.js"></script>
       <!-- initialize the SDK after all desired features are loaded -->
       <script src="/__/firebase/init.js"></script>
       <script type="text/javascript" src="js/aio.js"></script>
@@ -246,6 +263,16 @@
               minDate: "+0d"
             });
           } );
+      </script>
+
+      <script>
+          var input = document.getElementById("book-input");
+          input.addEventListener("keypress", function (event) {
+              if (event.keyCode === 13) {
+                  event.preventDefault();
+                  document.getElementById("book-search-btn").click();
+              }
+          });
       </script>
   </body>
 </html>
